# FastAPI_GraphQL

./: .env  .pre-commit-config.yml  Dockerfile  README.md  alembic.ini  commands.md  config.py  docker-compose.yml  main.py  pyproject.toml  schema.py
Graphql/: mutation.py  query.py
alembic/: env.py
alembic/versions/: c7a329a098a1_new_migration.py
backend/: db_config.py  models.py
middleware/: JWTBearer.py  JWTManager.py
model/: note.py
repository/: note.py  user.py
service/: authentication.py  note.py
