[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["arti <loscoarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphene-sqlalchemy = "^2.3.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
black = "^24.3.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
